[package]
name = "mongo_excel_matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0"
calamine = "0.25"
rust_xlsxwriter = "0.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = { version = "2", features = ["serde_with"] }
rfd = "0.15"
anyhow = "1.0"
regex = "1"